# df-ipscanner

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  plan.md
.claude/: settings.json
.github/workflows/: release.yml
src/: cli.rs  error.rs  main.rs  types.rs
src/network/: cidr.rs  mod.rs
src/os_detect/: mod.rs  ttl.rs
src/output/: formatter.rs
src/scanner/: arp.rs  dns.rs  mod.rs  ping.rs  port.rs
