[package]
name = "ip-scanner"
version = "0.1.0"
edition = "2021"
authors = ["Federico"]
description = "Fast CLI IP scanner with MAC, hostname, OS detection and port scanning"

[dependencies]
# CLI parsing
clap = { version = "4.5", features = ["derive"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Network utilities
ipnetwork = "0.20"
dns-lookup = "2.0"

# ICMP ping (async, cross-platform)
surge-ping = "0.8"

# Output formatting
comfy-table = "7.1"
indicatif = "0.17"
console = "0.15"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async utilities
futures = "0.3"

# Windows ARP API
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_NetworkManagement_IpHelper",
    "Win32_Foundation"
]}

[profile.release]
opt-level = 3
lto = true
